# st-solguard

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.toml  findings.json  index.html  narratives.json  solguard-report.html
.github/workflows/: pages.yml
src/: config.rs  error.rs  http.rs  lib.rs  llm.rs  main.rs  memory.rs
src/agent/: cross_ref.rs  mod.rs
src/narrative/: aggregator.rs  defi_llama.rs  discovery.rs  github.rs  mod.rs  social.rs  solana_rpc.rs  synthesizer.rs  types.rs
src/output/: mod.rs
src/security/: agent_review.rs  agent_tools.rs  ast_scan.rs  mod.rs  regex_scan.rs  validator.rs
templates/: solguard_report.html
test-results/: T32-opus-clean-room.json  T33-deepseek-fixed.json  T33-trinity-fixed.json
tests/: agent_tools_integration.rs  calibration.rs  cross_ref_integration.rs  model_router.rs  report_integration.rs  scanner_integration.rs
tests/calibration/: ground_truth.rs  tier1_cross_ref.rs  tier1_report.rs  tier1_static.rs  tier1_targeting.rs  tier2_e2e.rs  tier2_extraction.rs
tests/fixtures/: t32_opus_findings.txt
tests/fixtures/clean_repo/src/: lib.rs
tests/fixtures/vulnerable_repo/: Cargo.toml
tests/fixtures/vulnerable_repo/src/: lib.rs
