[package]
name = "st-solguard"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Autonomous Solana ecosystem intelligence agent — narrative detection + security scanning"
license = "MIT"
repository = "https://github.com/ampactor/st-solguard"
homepage = "https://ampactor.github.io/st-solguard/"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
askama = "0.15"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.25"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
fancy-regex = "0.14"
walkdir = "2.5"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
toml = "0.8"

